manifests/git-repo-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: git-repo-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: git-repo-server
  template:
    metadata:
      labels:
        app: git-repo-server
    spec:
      containers:
      - name: git-repo-server
        image: ghcr.io/kutespaces/simple-git-http-server:latest
        volumeMounts:
        - name: git-repo-volume
          mountPath: /git
        readinessProbe:
          httpGet:
            path: /git/argocd/info/refs?service=git-receive-pack
            port: 80
      volumes:
      - name: git-repo-volume
        emptyDir: {}
