manifests/git-repo-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: git-repo-server
spec:
  selector:
    app: git-repo-server
  ports:
    - protocol: TCP
      port: 22
      targetPort: 22
      nodePort: 30022
  type: NodePort
